# grep3

./: .env.example  .gitignore  Dockerfile  Dockerfile.scheduler  Dockerfile.worker  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/ncaab-predict/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/ncaab-predict/data/processed/: team_stats.parquet
apps/ncaab-predict/src/ncaa_predict/: __init__.py  cli.py
apps/ncaab-predict/src/ncaa_predict/analysis/: __init__.py  matchup.py  risk.py
apps/ncaab-predict/src/ncaa_predict/data/: __init__.py  loader.py  scraper.py
apps/ncaab-predict/src/ncaa_predict/features/: __init__.py
apps/ncaab-predict/src/ncaa_predict/models/: spread.py  trainer.py
apps/ncaab-predict/src/ncaa_predict/utils/: config.py
apps/ncaab-predict/src/ncaa_predict/web/: app.py
apps/ncaab-predict/src/ncaa_predict/web/templates/: index.html
apps/sports-predict/: .dockerignore  .gitignore  Dockerfile  README.md  deploy-heroku.sh  docker-compose.yml  pyproject.toml
apps/sports-predict/data/models/: ncaab_model.joblib  ncaaf_model.joblib  nfl_model.joblib  spread_model.joblib
apps/sports-predict/data/ncaab/processed/: games.parquet  team_stats.parquet
apps/sports-predict/data/ncaab/raw/: games_20260115.parquet  team_stats_20260110.parquet  team_stats_20260115.parquet
apps/sports-predict/data/ncaab/raw/cache/: games_2020.parquet  games_2021.parquet  games_2022.parquet  games_2023.parquet  games_2024.parquet  games_2025.parquet  team_stats_2020.parquet  team_stats_2021.parquet  team_stats_2022.parquet  team_stats_2023.parquet  (+2 more)
apps/sports-predict/data/ncaaf/processed/: team_stats.parquet
apps/sports-predict/data/ncaaf/raw/: games_20260115.parquet  team_stats_20260110.parquet  team_stats_20260112.parquet  team_stats_20260113.parquet  team_stats_20260115.parquet
apps/sports-predict/data/nfl/processed/: games.parquet  team_stats.parquet
apps/sports-predict/data/nfl/raw/: games_20260115.parquet  team_stats_20260110.parquet  team_stats_20260115.parquet
apps/sports-predict/data/raw/: games_20260107.parquet  team_stats_20260107.parquet
apps/sports-predict/src/sports_predict/: __init__.py  cli.py
apps/sports-predict/src/sports_predict/analysis/: __init__.py  football_risk.py  matchup.py  risk.py
apps/sports-predict/src/sports_predict/core/: __init__.py  registry.py  sport.py
apps/sports-predict/src/sports_predict/data/: __init__.py  base_scraper.py  espn_scraper.py  loader.py  sports_ref_scraper.py  team_aliases.py
apps/sports-predict/src/sports_predict/features/: __init__.py  efficiency.py  strength.py  team_stats.py
apps/sports-predict/src/sports_predict/models/: __init__.py  spread.py  trainer.py
apps/sports-predict/src/sports_predict/utils/: __init__.py  config.py
apps/sports-predict/src/sports_predict/web/: __init__.py  app.py
src/: config.ts  (+6 more)
(+516 files in other folders)
