[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncaa-predict"
version = "0.1.0"
description = "NCAA Basketball game prediction with point spread and risk analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "NCAA Predict Team" }
]
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",  # Required for parquet file support
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "typer>=0.9",
    "rich>=13.0",
    "thefuzz>=0.22",  # Fuzzy string matching for team names
    "python-Levenshtein>=0.25",  # Speed up thefuzz
    "joblib>=1.3",  # Model serialization
]

[project.optional-dependencies]
xgboost = [
    "xgboost>=2.0",  # Optional: better model performance
]
web = [
    "flask>=3.0",  # Web server for predictions UI
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]
all = [
    "ncaa-predict[xgboost,web,dev]",
]

[project.scripts]
ncaa-predict = "ncaa_predict.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ncaa_predict"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/data/models",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
